<resources>
    <string name="app_name">FoxMedia</string>
    <string name="navigation_drawer_open">Навигацияни очиш</string>
    <string name="navigation_drawer_close">Навигацияни ёпиш</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigatsiya nomi</string>
    <string name="action_settings">Созламалар</string>

    <string name="menu_home">Бош</string>
    <string name="menu_gallery">Галерея</string>
    <string name="menu_slideshow">Слайд-шоу</string>

    <string name="home_second">Бош иккинчи</string>
    <string name="skip">ўтказиб юбориш</string>
    <string name="complete">тугатиш</string>
    <string name="completed">Тугатилган</string>
    <string name="error">Хатолик</string>
    <string name="register">РEГИСТРАЦИЯ</string>
    <string name="phone_num">Телефон рақамини киритинг</string>
    <string name="back">Ортга</string>
    <string name="send_message">Биз сизга кодни СМС орқали жўнатдик</string>
    <string name="enter_code">СМС даги кодни киритинг</string>
    <string name="category">Категория</string>
    <string name="see_more">Яна</string>
    <string name="login">ЛОГИН</string>
    <string name="language">Тил</string>
    <string name="category_name">Категория номи</string>
    <string name="password">Парол</string>
    <string name="forgot_password">Паролингизни унутдингизми?</string>
    <string name="enter_name">Исмингизни киритинг</string>
    <string name="enter_surname">Фамилянгизни киритинг</string>
    <string name="confirm_password">Паролни тасдиқланг</string>
    <string name="restore_instructions">Биз сизга 6 та рақамли код жўнатамиз</string>
    <string name="reset_password">Паролни тиклаш</string>
    <string name="unknown_error">Номаълум хатолик қайта уриниб кўринг\'ring</string>
    <string name="server_error">Серверда хатолик қайта уриниб кўринг</string>
    <string name="no_connection">Интернет алоқасини текширинг</string>
    <string name="invalid_code">Тасдиқлаш коди яроқсиз ёки унинг муддати тугаган</string>
    <string name="invalid_password">Нотўғри парол</string>
    <string name="invalid_number">Нотўғри рақам</string>
    <string name="invalid_input">Нотўғри киритиш</string>
    <string name="categories">Категориялар</string>
    <string name="all_courses">Барча курслар</string>
    <string name="top_courses">Топ курслар</string>
    <string name="all_categories">Барча категориялар</string>
    <string name="best_seller"> Бестселлер</string>
    <string name="search_courses">Курсларни қидириш</string>
    <string name="subscription">обуна орқали</string>
    <string name="som">%d сўм</string>
    <string name="som_formatted">%s сўм</string>
    <string name="connection_error">Уланиб бўлмади</string>
    <string name="invalid_user">Нотўғри логин ёки парол</string>
    <string name="see_all">Барчаси</string>
    <string name="one_time_payment">Бир марталик тўлов</string>
    <string name="no_top_courses">Топ курслар мавжуд эмас</string>
    <string name="no_categories">Категориялар мавжуд эмас</string>
    <string name="dashboard">Асосий</string>
    <string name="my_courses">Менинг курсларим</string>
    <string name="wishlist">Сақланганлар</string>
    <string name="no_courses">Курслар мавжуд эмас :/</string>
    <string name="purchased">Харид қилинган</string>
    <string name="purchased_at">Сотиб олинган: %s</string>
    <string name="published">Юкланган: %s</string>
    <string name="buy_now">Харид қилиш</string>
    <string name="course_info">Курс маълумоти</string>
    <string name="recommended">Тавсия этилади</string>
    <string name="description">Тавсиф</string>
    <string name="teacher">Инструктор</string>
    <string name="duration">Жами давомийлиги:</string>
    <string name="total_videos">Жами видеолар</string>
    <string name="total_price">Жами нархи</string>
    <string name="discount">Чегирма</string>
    <string name="percent">%d %%</string>
    <string name="sale_price">Сотилаётган нархи</string>
    <string name="account">Аккаунт</string>
    <string name="balance">Баланс \n%s сўм</string>
    <string name="personal_info">Шахсий маълумотлар</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="watch_time">Жами кўрилган вақт: %02d:%02d:%02d</string>
    <string name="phone_number">Рақам: %d</string>
    <string name="subscriptions">Обуналар</string>
    <string name="finishes">Тугайди:</string>
    <string name="transactions">Ўтказмалар</string>
    <string name="replenished">Тўлдирилган:</string>
    <string name="sessions">Сессиялар</string>
    <string name="finished">Тугаш санаси: %s</string>
    <string name="permission_denied">Рухсат берилмади</string>
    <string name="edit">Таҳрирлаш</string>
    <string name="replenish_balance">Балансни тўлдириш</string>
    <string name="edit_profile">Профилни таҳрирлаш</string>
    <string name="change_username">Исмни ўзгартириш</string>
    <string name="save">Сақлаш</string>
    <string name="current_password">Ҳозирги парол</string>
    <string name="new_password">Янги парол</string>
    <string name="change_password">Паролни ўзгартириш</string>
    <string name="free">Текин</string>
    <string name="comment">Изоҳлар</string>
    <string name="files">Файллар</string>
    <string name="enter_commentary">Изоҳ қолдириш</string>
    <string name="log_out">Чиқиш</string>
    <string name="no_teacher_info">Инструктор ҳақида маълумот йўқ</string>
    <string name="attached_files">Бириктирилган файллар</string>
    <string name="payment_details">Тўлов маълумотлари</string>
    <string name="course_name">Курс номи</string>
    <string name="limit">Лимит</string>
    <string name="months">%d oйлар</string>
    <string name="percentage">%d %%</string>
    <string name="unlimited">Чегараланмаган</string>
    <string name="loading">Юкланмоқда...</string>
    <string name="amount">Миқдор</string>
    <string name="checkout">Толаш</string>
    <string name="are_you_sure">Ишончингиз комилми?</string>
    <string name="no">Йўқ</string>
    <string name="yes">Ҳа</string>
    <string name="file">ФАЙЛ</string>
    <string name="uzbek">O\'zbekcha</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="uzbek_ru">Ўзбекча</string>
    <string name="province">Шаҳар</string>
    <string name="region">Туман</string>
</resources>