<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logo" />

        <TextView
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_name"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:passwordToggleTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_surname"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_surname"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:passwordToggleTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:ccp_defaultNameCode="UZ"
                app:ccp_rememberLastSelection="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone"
                style="@style/EditTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.santalu.maskedittext.MaskEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_num"
                    android:inputType="phone"
                    app:met_mask="(##) ### ## ##" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:text="@string/province"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:paddingEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <TextView
            android:text="@string/region"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:paddingEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password"
            style="@style/EditTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.dx.dxloadingbutton.lib.LoadingButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:lb_btnColor="@color/colorPrimary"
            app:lb_btnDisabledColor="@android:color/darker_gray"
            app:lb_btnRippleColor="@color/colorAccent"
            app:lb_btnText="Send code"
            app:lb_cornerRadius="32"
            app:lb_resetAfterFailed="true"
            app:lb_rippleEnable="false" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>