<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_back"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:text="@string/back"
            android:textAppearance="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="15sp"
            app:icon="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/send_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="40dp"
            android:background="#B8B6B6" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_code"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:hint="@string/enter_code"
            android:inputType="numberDecimal"
            android:textSize="25sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#B8B6B6" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:visibility="invisible"
            android:layout_width="100dp"
            android:layout_height="100dp"/>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>